recent_topics: Fix buggy scrolling.
The knob of the scroll bar scrolled out of view in both Firefox and
Chromium and on Firefox it even cut off the last entry.

Fixes #15511.

--- a/static/styles/recent_topics.scss
+++ b/static/styles/recent_topics.scss
@@ -56,6 +56,8 @@
         margin: 0px;
         padding: 15px;
         overflow: hidden !important;
+        display: flex;
+        flex-direction: column;
 
         a {
             color: hsl(205, 47%, 42%);
@@ -85,7 +87,6 @@
             padding: 10px;
             padding-top: 0px !important;
             overflow-y: auto;
-            max-height: 100%;
         }
 
         .table_fix_head table {
